outputs/csi300-test/eoh/2025-07-28_17-06-06/evaluations/problem_eval-4411066265746353334_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/rjj/reevo/problems/csi300/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/rjj/reevo/problems/csi300/tmp/gpt_temp_2_e1111a80.py", line 1
    defined by the absolute difference between the daily closing price and its 10-day exponential moving average, to highlight significant price movements.}
                                                                                                                                                           ^
SyntaxError: unmatched '}'
